@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 23121b102a4fbdb28c9880f6e7b33e47d99cdfc8 ChangeLog
+SHA1 326f0d0f1a66acd31e98c3a7f5b5d908f25cc410 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 94a9e947b92a62a52ad83c663dcd21034a696620 META.yml
-SHA1 37e75158cddbb4d1bb9fe4fcd262e65ca62bed82 MYMETA.json
-SHA1 120686d73997802038f6a11bdcbd30b496e57175 MYMETA.yml
-SHA1 81f8356fda1ae3c61e9b0802b1e74f1b797332b5 Makefile.PL
+SHA1 f506d8e6fc8f89d88c5ee9be51c0c5db3f32f40c META.yml
+SHA1 708c8a2a5a684b99f8d94a09d78f8aacd04601ac MYMETA.json
+SHA1 581232c3c0ca15af7e7eea29dbf7384cb4c6ef99 MYMETA.yml
+SHA1 4ceff98d8f311507cdb4156a98a05751bd7fb2d7 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 6c358501bcbfc3a36c6f24376da852739e47f40d lib/Net/FullAuto.pm
+SHA1 5d26c03e76426151752b1798fc710bec006d9f44 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlEUio0ACgkQJM3IZYB6aOrExACeKq9kSLuIO3QAmeIWoIyHoifF
-uCgAoKbG/aSB2r9eJrPnyOD2+U19p8RL
-=+tUa
+iEYEARECAAYFAlEVKUMACgkQJM3IZYB6aOoeWgCdHaT4o2gwINKr855+1GWH1kz2
+X40Anij+5UP2QGuWT74trj2f+HBWKOks
+=fx0Z
 -----END PGP SIGNATURE-----
